<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5fbfe"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/loginHeader"
        android:background="@color/main"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:textSize="28sp"
            android:textColor="#f5fbfe"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:id="@+id/loginContent"
        android:layout_below="@id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bodyTitle"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:text="@string/sing_in"
            android:textColor="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <EditText
            android:hint="@string/email"
            android:padding="10dp"
            android:background="@drawable/et_rounder_corner"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:layout_below="@id/bodyTitle"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:layout_height="40dp"/>

        <EditText
            android:hint="@string/password"
            android:padding="10dp"
            android:background="@drawable/et_rounder_corner"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_below="@id/etEmail"
            android:inputType="textPassword"
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_height="40dp"/>

        <RadioButton
            android:id="@+id/rbRemember"
            android:buttonTint="@color/main"
            android:layout_below="@id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"/>

        <Button
            android:layout_marginTop="75dp"
            android:id="@+id/btnLogin"
            android:text="@string/sing_in_now"
            android:background="@drawable/btn_rounder_corner"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rbRemember"
            android:layout_width="200dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_marginTop="45dp"
            android:layout_below="@id/btnLogin"
            android:id="@+id/tvNoAccount"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:text="@string/no_account"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:layout_below="@id/tvNoAccount"
            android:id="@+id/tvSignUp"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/sign_up_here"
            android:textColor="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>




    </RelativeLayout>



</RelativeLayout>