<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/vProfileBackground"
        android:background="@color/main"
        android:alpha="0.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/layout_profile"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCloseProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_user"/>

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/imgCloseProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <LinearLayout
            android:id="@+id/lyPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgProfilePic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfileName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/et_rounder_corner"
                android:hint="Juan Jesus Herrera Benitez"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfilePhone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/et_rounder_corner"
                android:hint="+1(829)935-0432"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/et_rounder_corner"
                android:hint="juanjesus1894@gmail.com"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyPIN"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/lyConnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_buttom_inverse"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>